--- a/landing page/style.css
+++ b/landing page/style.css
@@ -91,7 +91,7 @@ body {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 32px;
-    color: #DE5454;
+    color: #CA2626;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -100,6 +100,8 @@ body {
 
 .rodape {
     padding: 100px;
+    display: flex;
+    align-items: center;
 }
 
 .logo-rodape{
